plugins {
    id "com.github.spotbugs" version "6.2.3"
    id "com.github.ngyewch.git-version" version "0.2"
}

apply plugin: 'idea'
apply plugin: 'java'
apply plugin: "pmd"
apply plugin: 'jacoco'

group 'com.mtecresults'
version = gitVersion.gitVersionInfo.gitVersionName

sourceCompatibility = 17

dependencies {
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    implementation group: 'org.apache.mina', name: 'mina-core', version: '2.2.4'
    runtimeOnly 'org.slf4j:slf4j-simple:1.7.25'

    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
    testImplementation 'org.jmockit:jmockit:1.39'
}

repositories {
    mavenCentral()
}

spotbugs {
    ignoreFailures = true
    reportsDir = file("$project.buildDir/reports/findbugs")
    effort = "max"
}

pmd {
    ignoreFailures = true
    sourceSets = [sourceSets.main]
    reportsDir = file("$project.buildDir/reports/pmd")
    toolVersion = "6.21.0"
    ruleSets = [
            'java-android',
            'java-basic',
            'java-braces',
            'java-clone',
            'java-codesize',
            'java-controversial',
            'java-coupling',
            'java-design',
            'java-empty',
            'java-finalizers',
            'java-imports',
            'java-j2ee',
            'java-javabeans',
            'java-junit',
            'java-logging-jakarta-commons',
            'java-logging-java',
            'java-migrating',
            'java-naming',
            'java-optimizations',
            'java-strictexception',
            'java-strings',
            'java-sunsecure',
            'java-typeresolution',
            'java-unnecessary',
            'java-unusedcode'
    ]
}